tests/spec/parse/snapshots/match_struct_uppercase_shorthand.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test(p: Point) {
    match p {
      Point { X } => X,
    }
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [
            Binding {
                pattern: Identifier {
                    identifier: "p",
                    span: Span {
                        file_id: 0,
                        byte_offset: 9,
                        byte_length: 1,
                    },
                    binding: None,
                },
                annotation: Some(
                    Constructor {
                        name: "Point",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 12,
                            byte_length: 5,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
            },
        ],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Match {
                        subject: Identifier {
                            value: "p",
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 29,
                                byte_length: 1,
                            },
                            resolution: Unresolved,
                        },
                        arms: [
                            MatchArm {
                                pattern: Struct {
                                    identifier: "Point",
                                    fields: [
                                        StructFieldPattern {
                                            name: "X",
                                            value: Identifier {
                                                identifier: "X",
                                                span: Span {
                                                    file_id: 0,
                                                    byte_offset: 45,
                                                    byte_length: 1,
                                                },
                                                binding: None,
                                            },
                                        },
                                    ],
                                    rest: false,
                                    resolution: Unresolved,
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 37,
                                        byte_length: 11,
                                    },
                                },
                                expression: Identifier {
                                    value: "X",
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 52,
                                        byte_length: 1,
                                    },
                                    resolution: Unresolved,
                                },
                            },
                        ],
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 23,
                            byte_length: 35,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 19,
                    byte_length: 41,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 59,
        },
    },
]
